Added a new user endpoint to send login requests. Added bcrypt to compare passwords with hashed passwords which are now stored in an sql table.
